--- a/renderer/styles/components/_components.scss
+++ b/renderer/styles/components/_components.scss
@@ -1,5 +1,5 @@
 @import "./button.scss";
-
+@import "./input.scss";
 @layer components {
   .sidebar {
     @apply bg-white bg-opacity-50 backdrop-filter backdrop-blur-sm;
