post view refactor, added chakra ui, fixed settings memory leak, downloads now have booru origin saved, added plyr for video/audio playback, several refactors

--- a/renderer/styles/globals.scss
+++ b/renderer/styles/globals.scss
@@ -49,3 +49,6 @@ a {
 @import "components/components";
 
 @import "tailwindcss/utilities";
+/* purgecss start ignore */
+@import 'plyr/dist/plyr.css';
+/* purgecss end ignore */
